--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,16 @@ body {
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
 }
+html {
+  scroll-behavior: smooth;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome, Edge, Opera and Firefox */
+}
 
 * {
   box-sizing: border-box;
