--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,15 @@ html {
   --bggradient: linear-gradient(to bottom, #dd2476, #ff512f);
   --light-gray: rgba(255, 255, 255, 0.877);
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-family: "Poppins", sans-serif;
+}
 
 .navbar-brand {
   padding-left: 0.9em;
